--- a/refman/scripts/MainPageGenerator/iframes/tree/jquery.treeview.css
+++ b/refman/scripts/MainPageGenerator/iframes/tree/jquery.treeview.css
@@ -68,7 +68,8 @@
 }
 
 .filetree li { padding: 3px 0 2px 16px; }
-.filetree span.folder, .filetree span.file { padding: 1px 0 1px 16px; display: block; }
+.filetree span.folder, span.emptyFolder, .filetree span.file { padding: 1px 0 1px 16px; display: block; }
 .filetree span.folder { background: url(images/folder.gif) 0 0 no-repeat; }
 .filetree li.expandable span.folder { background: url(images/folder-closed.gif) 0 0 no-repeat; }
 .filetree span.file { background: url(images/file.gif) 0 0 no-repeat; }
+.filetree span.emptyFolder { background: url(images/empty-folder.gif) 0 0 no-repeat; }
